--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,77 @@
-<!DOCTYPE html ><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, maximum-scale=1.0"/><meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/><title>Seaside Cinema</title><link rel="stylesheet" href="/css/main.css"/><link rel="icon" href="/images/logo.png" type="image/icon"/><link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/></head><body><nav class="navigation navigation--desktop"><a href="/html/index.html"> <img class="navigation__theater-logo" src="/images/logo.png" alt="Logo of the Starlight Cinema"/></a><ul class="navigation__list"><li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li><li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li><li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li><li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li><li class="navigation__list-item"><a class="login-link navigation__links" href="/html/login.html">Login</a></li></ul><a class="login-icon-link" href="/html/login.html"><i class="login-icon__button fa-solid fa-user"></i></a></nav><nav class="navigation navigation--mobile"><ul class="navigation__list"> <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li><li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li><li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li><li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li></ul></nav><label class="hamburger-menu"><span class="hamburger-menu__bar"></span></label><header><div class="featured-background"><img class="featured__image" src="/images/spirited_away.jpg" alt="Poster of the Movie Her"/></div></header><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"></div></div><div class="movie-card"><div class="movie-card__bottom"> </div></div><div class="pagination"> <a class="pagination__link active" href="#">1</a><a class="pagination__link" href="#">2  </a><a class="pagination__link" href="#">3 </a><a class="pagination__link" href="#">4  </a><a class="pagination__link" href="#">5  </a><a class="pagination__link" href="#">6  </a></div><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script><script nomodule="nomodule" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script><script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script><script src="/js/main.js"> </script></body><footer></footer></html>
+<!DOCTYPE html >
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
+    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
+    <title>Seaside Cinema</title>
+    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="icon" href="/images/logo.png" type="image/icon"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+  </head>
+  <body>
+    <nav class="navigation navigation--desktop"><a href="/html/index.html"> <img class="navigation__theater-logo" src="/images/logo.png" alt="Logo of the Starlight Cinema"/></a>
+      <ul class="navigation__list">
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
+        <li class="navigation__list-item"><a class="login-link navigation__links" href="/html/login.html">Login</a></li>
+      </ul><a class="login-icon-link" href="/html/login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
+    </nav>
+    <nav class="navigation navigation--mobile">
+      <ul class="navigation__list"> 
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
+      </ul>
+    </nav>
+    <label class="hamburger-menu"><span class="hamburger-menu__bar"></span></label>
+    <header>
+      <div class="featured-background"><img class="featured__image" src="/images/spirited_away.jpg" alt="Poster of the Movie Her"/></div>
+    </header>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"></div>
+    </div>
+    <div class="movie-card">
+      <div class="movie-card__bottom"> </div>
+    </div>
+    <div class="pagination"> <a class="pagination__link active" href="#">1</a><a class="pagination__link" href="#">2  </a><a class="pagination__link" href="#">3 </a><a class="pagination__link" href="#">4  </a><a class="pagination__link" href="#">5  </a><a class="pagination__link" href="#">6  </a></div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="nomodule" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
+    <script src="/js/main.js"> </script>
+  </body>
+  <footer></footer>
+</html>
