--- a/html/signup.html
+++ b/html/signup.html
@@ -1,1 +1,40 @@
-<html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, maximum-scale=1.0"/><meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/><title>Starlight Cinema</title><link rel="stylesheet" href="/css/login_and_signup.css"/><link rel="icon" href="/images/star_logo.png" type="image/icon"/><link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/></head><body><article> <div class="sign-up-wrapper"><button class="back-button"><a class="back-button__link" href="/html/index.html"> <i class="fa-solid fa-angle-left"></i></a></button><h1>Sign up</h1><form class="sign-up-wrapper__form" method="post"> <div> <input id="signup-name" type="text" required="required" placeholder="Full Name"/></div><div> <input id="signup-date-of-birth" type="date" required="required"/></div><div> <input id="signup-email" type="email" required="required" placeholder="E-Mail"/></div><div>       <input id="signup-username" type="text" required="required" placeholder="Username"/></div><div><input id="signup-password" type="password" name="password" minlength="8" required="required" placeholder="Password"/></div><input id="submit" type="submit" value="Sign up!"/><p>Already have an account? <a class="sign-in-link" href="/html/login.html">Sign in</a></p></form></div></article><script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script></body></html>
+
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
+    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
+    <title>Starlight Cinema</title>
+    <link rel="stylesheet" href="/css/login_and_signup.css"/>
+    <link rel="icon" href="/images/star_logo.png" type="image/icon"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+  </head>
+  <body>
+    <article> 
+      <div class="sign-up-wrapper">
+        <button class="back-button"><a class="back-button__link" href="/html/index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
+        <h1>Sign up</h1>
+        <form class="sign-up-wrapper__form" method="post"> 
+          <div> 
+            <input id="signup-name" type="text" required="required" placeholder="Full Name"/>
+          </div>
+          <div> 
+            <input id="signup-date-of-birth" type="date" required="required"/>
+          </div>
+          <div> 
+            <input id="signup-email" type="email" required="required" placeholder="E-Mail"/>
+          </div>
+          <div>       
+            <input id="signup-username" type="text" required="required" placeholder="Username"/>
+          </div>
+          <div>
+            <input id="signup-password" type="password" name="password" minlength="8" required="required" placeholder="Password"/>
+          </div>
+          <input id="submit" type="submit" value="Sign up!"/>
+          <p>Already have an account? <a class="sign-in-link" href="/html/login.html">Sign in</a></p>
+        </form>
+      </div>
+    </article>
+    <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
+  </body>
+</html>
