added a template for every movie page

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
-    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
+    <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht."/>
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="/css/main.css"/>
     <link rel="icon" href="/images/logo.png" type="image/icon"/>
@@ -29,7 +29,7 @@
     </nav>
     <label class="hamburger-menu"><span class="hamburger-menu__bar"></span></label>
     <header>
-      <div class="featured-background"><img class="featured__image" src="/images/spirited_away.jpg" alt="Poster of the Movie Her"/></div>
+      <div class="featured-background"><img class="featured__image" src="/images/spirited_away.jpg" alt="Poster of the Movie Spirited Away"/></div>
     </header>
     <div class="movie-card">
       <div class="movie-card__bottom"></div>
