added hover effects for main page

--- a/html/index.html
+++ b/html/index.html
@@ -31,41 +31,47 @@
     <header>
       <div class="featured-background"><img class="featured__image" src="/images/spirited_away.jpg" alt="Poster of the Movie Spirited Away"/></div>
     </header>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"></div>
-    </div>
-    <div class="movie-card">
-      <div class="movie-card__bottom"> </div>
+    <div class="movies-container-one">             
+      <div class="movie-card"><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <div class="movie-card__bottom"> </div>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Captain America: The First Avenger</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
+      <div class="movie-card">
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" src="https://resizing.flixster.com/i-GXjMjF3uEhOGrFXptIH0JwWmE=/206x305/v2/https://flxt.tmsimg.com/assets/p9991186_p_v8_ag.jpg"/>
+        <h1 class="movie-card__header">Her</h1>
+      </div>
     </div>
     <div class="pagination"> <a class="pagination__link active" href="#">1</a><a class="pagination__link" href="#">2  </a><a class="pagination__link" href="#">3 </a><a class="pagination__link" href="#">4  </a><a class="pagination__link" href="#">5  </a><a class="pagination__link" href="#">6  </a></div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
