--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="/css/login_and_signup.css"/>
-    <link rel="icon" type="image/icon" href="/images/logo.png" />
+    <link rel="icon" href="/images/logo.png" type="image/icon"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
   </head>
   <body>
