changed to file structure and added the main page posters

--- a/html/signup.html
+++ b/html/signup.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
     <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
     <title>Seaside Cinema</title>
-    <link rel="stylesheet" href="/css/login_and_signup.css"/>
-    <link rel="icon" href="/images/logo.png" type="image/icon"/>
+    <link rel="stylesheet" href="css/login_and_signup.css"/>
+    <link rel="icon" href="images/logo.png" type="image/icon"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
   </head>
   <body>
     <article> 
       <div class="sign-up-wrapper">
-        <button class="back-button"><a class="back-button__link" href="/html/index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
+        <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
         <h1>Sign up</h1>
         <form class="sign-up-wrapper__form" method="post"> 
           <div> 
@@ -31,7 +31,7 @@
             <input id="signup-password" type="password" name="password" minlength="8" required="required" placeholder="Password"/>
           </div>
           <input id="submit" type="submit" value="Sign up!"/>
-          <p>Already have an account? <a class="sign-in-link" href="/html/login.html">Sign in</a></p>
+          <p>Already have an account? <a class="sign-in-link" href="login.html">Sign in</a></p>
         </form>
       </div>
     </article>
