--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -73,12 +73,12 @@
         <h1 class="movie-card__header"> </h1>
       </div>
     </div>
-    <div class="pagination"> <a class="pagination__link active" href="index.html">1</a><a class="pagination__link" href="index-page-2.html">2  </a></div>
+    <div class="pagination"> <a class="pagination__link" href="index.html">1</a><a class="pagination__link active" href="index-page-2.html">2  </a></div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="nomodule" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
     <script src="js/main.js"> </script>
-    <script src="db/database.js"></script>
+    <script src="db/database2.js"></script>
   </body>
   <footer></footer>
 </html>
