--- a/html/nav.html
+++ b/html/nav.html
@@ -1,12 +1,12 @@
 
-<nav class="navigation navigation--desktop"><a href="/html/index.html"> <img class="navigation__theater-logo" src="/images/logo.png" alt="Logo of the Starlight Cinema"/></a>
+<nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
   <ul class="navigation__list">
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
-    <li class="navigation__list-item"><a class="login-link navigation__links" href="/html/login.html">Login</a></li>
-  </ul><a class="login-icon-link" href="/html/login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
+    <li class="navigation__list-item"><a class="login-link navigation__links" href="login.html">Login</a></li>
+  </ul><a class="login-icon-link" href="login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
 </nav>
 <nav class="navigation navigation--mobile">
   <ul class="navigation__list"> 
