movie description pages
Added the ability to see the description of movies on their own pages, although it may be a bit cumbersome.

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
       <ul class="navigation__list">
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
@@ -21,7 +21,7 @@
     </nav>
     <nav class="navigation navigation--mobile">
       <ul class="navigation__list"> 
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
@@ -33,43 +33,43 @@
     </header>
     <div class="movies-container-one">             
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id1"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id2"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id3"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id4"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id5"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id6"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id7"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id8"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id9"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id10"/>
         <h1 class="movie-card__header"> </h1>
       </div>
     </div>
