--- a/html/movie_page.html
+++ b/html/movie_page.html
@@ -4,13 +4,13 @@
         <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
         <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht."/>
         <title>Seaside Cinema</title>
-        <link rel="icon" href="/images/logo.png" type="image/icon"/>
-        <link rel="stylesheet" href="/css/movie_page.css">
+        <link rel="icon" href="/public/images/logo.png" type="image/icon"/>
+        <link rel="stylesheet" href="/public/css/movie_page.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head> 
 
     <body>    
-        <nav class="navigation navigation--desktop"><a href="/html/index.html"> <img class="navigation__theater-logo" src="/images/logo.png" alt="Logo of the Starlight Cinema"/></a>
+        <nav class="navigation navigation--desktop"><a href="/html/index.html"> <img class="navigation__theater-logo" src="/public/images/logo.png" alt="Logo of the Starlight Cinema"/></a>
             <ul class="navigation__list">
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
@@ -38,11 +38,11 @@
              </button> 
         </div>
         <div class="credits-wrapper">
-            <h2 class="credits-wrapper__heading">credits</h2>
+            <h2 class="credits-wrapper__heading">Credits</h2>
             <dl class="movie-details">
-                <dt >Director</dt>
+                <dt>Director</dt>
                 <dd>Hayao Miyazaki</dd>
-                <dt >Cast</dt>
+                <dt>Cast</dt>
                 <dd>Daveigh Chase, Suzanne Pleshette, Miyu Irino</dd>
                 <dt>Genre</dt>
                 <dd>Anime, Fantasy, Mystery</dd>
@@ -57,7 +57,7 @@
             <p class="movie-description">
                 10-year-old Chihiro (Daveigh Chase) moves with her parents to a new home in the Japanese countryside. After taking a wrong turn down a wooded path, Chihiro and her parents discover an amusement park with a stall containing an assortment of food. To her surprise, Chihiro's parents begin eating and then transform into pigs. In this supernatural realm, Chihiro encounters a host of characters and endures labor in a bathhouse for spirits, awaiting a reunion with her parents.
             </p>
-    <script src="/js/main.js"></script>
+    <script src="/public/js/main.js"></script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
     </body>
 </html>
