--- a/html/nav.html
+++ b/html/nav.html
@@ -1,7 +1,7 @@
 
 <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
   <ul class="navigation__list">
-    <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+    <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
@@ -10,7 +10,7 @@
 </nav>
 <nav class="navigation navigation--mobile">
   <ul class="navigation__list"> 
-    <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+    <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
     <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
