--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
       <ul class="navigation__list">
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
@@ -21,7 +21,7 @@
     </nav>
     <nav class="navigation navigation--mobile">
       <ul class="navigation__list"> 
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
         <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
@@ -33,43 +33,43 @@
     </header>
     <div class="movies-container-one">             
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id11"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id12"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id13"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id14"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id15"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id16"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id17"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id18"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id19"/>
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id20"/>
         <h1 class="movie-card__header"> </h1>
       </div>
     </div>
