--- a/html/signup.html
+++ b/html/signup.html
@@ -19,7 +19,7 @@
             <input id="signup-name" type="text" required="required" placeholder="Full Name"/>
           </div>
           <div> 
-            <input id="signup-date-of-birth" type="date" required="required"/>
+            <input id="signup-date-of-birth" type="date" required="required" max="2023-04-01"/>
           </div>
           <div> 
             <input id="signup-email" type="email" required="required" placeholder="E-Mail"/>
