--- a/html/movie_description.html
+++ b/html/movie_description.html
@@ -12,7 +12,7 @@
     <body>    
         <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
             <ul class="navigation__list">
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+                <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
@@ -21,7 +21,7 @@
         </nav>
         <nav class="navigation navigation--mobile">
             <ul class="navigation__list"> 
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Home</a></li>
+                <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
                 <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
