--- a/html/login.html
+++ b/html/login.html
@@ -31,6 +31,6 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="nomodule" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"> </script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"> </script>
+    <script src="js/login.js"> </script>
   </body>
 </html>
