--- a/html/order.html
+++ b/html/order.html
@@ -17,8 +17,8 @@
         <h1>Ticket </h1>
         <form class="sign-up-wrapper__form" method="post"> 
           <div> 
-            <select id="signup-name"> 
-              <option value="0" disabled="disabled" selected="selected">Movies</option>
+            <select id="movie" required> 
+              <option value="" disabled="disabled" selected="selected">Movies</option>
               <option class="movie-option" value="1"> </option>
               <option class="movie-option" value="2"> </option>
               <option class="movie-option" value="3"> </option>
@@ -40,8 +40,8 @@
               <option class="movie-option" value="19"></option>
               <option class="movie-option" value="20"></option>
             </select>
-            <select id="signup-name"> 
-              <option value="0" disabled="disabled" selected="selected">Ticket amount</option>
+            <select id="ticket-quantity" required> 
+              <option value="" disabled="disabled" selected="selected">Ticket amount</option>
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -53,8 +53,12 @@
               <option value="9">9</option>
               <option value="10">10</option>
             </select> 
-
-            <button id="button">confirm order</button>
+            <select id="movie-time" required> 
+              <option value="" disabled="disabled" selected="selected">Time</option>
+              <option id="movie-time-one" value="1"></option>
+              <option id="movie-time-two" value="2"></option>
+            </select> 
+            <button id="button">Confirm Order</button>
           </div>
         </form>
       </div>
