--- a/html/order.html
+++ b/html/order.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="css/login_and_signup.css"/>
-    <link rel="stylesheet" href="css/order.css"/>
     <link rel="icon" href="images/logo.png" type="image/icon"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
   </head>
@@ -14,7 +13,7 @@
     <article> 
       <div class="sign-up-wrapper">
         <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
-        <h1>Ticket </h1>
+        <h1>Order your ticket!</h1>
         <form class="sign-up-wrapper__form" method="post"> 
           <div> 
             <select id="movie" required> 
@@ -58,7 +57,7 @@
               <option id="movie-time-one" value="1"></option>
               <option id="movie-time-two" value="2"></option>
             </select> 
-            <button id="button">Confirm Order</button>
+            <button id="confirm-button">Confirm Order</button>
           </div>
         </form>
       </div>
