Credit card and nav
updated sign up with credit card input, also changed to nav to only contain login and home.

--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -1,81 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
-    <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht."/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht.">
     <title>Seaside Cinema</title>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="icon" href="images/logo.png" type="image/icon"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="images/logo.png" type="image/icon">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
+    <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"></a>
       <ul class="navigation__list">
-        <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
-        <li class="navigation__list-item"><a class="login-link navigation__links" href="login.html">Login</a></li>
+        <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a><a class="login-link navigation__links" href="login.html">Login</a></li>
       </ul><a class="login-icon-link" href="login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
     </nav>
     <nav class="navigation navigation--mobile">
       <ul class="navigation__list"> 
         <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
-        <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
       </ul>
     </nav>
     <label class="hamburger-menu"><span class="hamburger-menu__bar"></span></label>
     <header>
-      <div class="featured-background"><img class="featured__image" src="images/spirited_away.jpg" alt="Poster of the Movie Spirited Away"/></div>
+      <div class="featured-background"><img class="featured__image" src="images/spirited_away.jpg" alt="Poster of the Movie Spirited Away"></div>
     </header>
     <div class="movies-container-one">             
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id11"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id11">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id12"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id12">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id13"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id13">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id14"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id14">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id15"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id15">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id16"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id16">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id17"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id17">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id18"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id18">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id19"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id19">
         <h1 class="movie-card__header"> </h1>
       </div>
       <div class="movie-card">
-        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id20"/>
+        <div class="movie-card__bottom"></div><img class="movie-card__poster" id="id20">
         <h1 class="movie-card__header"> </h1>
       </div>
     </div>
     <div class="pagination"> <a class="pagination__link" href="index.html">1</a><a class="pagination__link active" href="index-page-2.html">2  </a></div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="nomodule" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
     <script src="js/main.js"> </script>
     <script src="db/database2.js"></script>
