--- a/html/signup.html
+++ b/html/signup.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
-  <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
-  <title>Seaside Cinema</title>
-  <link rel="stylesheet" href="css/login_and_signup.css"/>
-  <link rel="icon" href="images/logo.png" type="image/icon"/>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
-</head>
-<body>
-  <article> 
-    <div class="sign-up-wrapper">
-      <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
-      <h1>Sign up</h1>
-      <form class="sign-up-wrapper__form" method="post"> 
-        <div> 
-          <input id="signup-name" type="text" required="required" placeholder="Full Name"/>
-        </div>
-        <div> 
-          <input id="signup-date-of-birth" type="date" required="required" max="01-04-2023"/>
-        </div>
-        <div> 
-          <input id="signup-email" type="email" required="required" placeholder="E-Mail"/>
-        </div>
-        <div>       
-          <input id="signup-username" type="text" required="required" placeholder="Username"/>
-        </div>
-        <div>
-          <input id="signup-password" type="password" name="password" minlength="8" required="required" placeholder="Password"/>
-        </div>
-        <input id="submit" type="submit" value="Sign up!"/>
-        <p>Already have an account? <a class="sign-in-link" href="login.html">Sign in</a></p>
-      </form>
-    </div>
-  </article>
-  <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
-  <script src="signup.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.">
+    <title>Seaside Cinema</title>
+    <link rel="stylesheet" href="css/login_and_signup.css">
+    <link rel="icon" href="images/logo.png" type="image/icon">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  </head>
+  <body>
+    <article> 
+      <div class="sign-up-wrapper">
+        <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
+        <h1>Sign up</h1>
+        <form class="sign-up-wrapper__form" method="post"> 
+          <div> 
+            <input id="signup-name" type="text" required placeholder="Full Name">
+          </div>
+          <div> 
+            <input id="signup-date-of-birth" type="date" required max="01-04-2023">
+          </div>
+          <div> 
+            <input id="signup-email" type="email" required placeholder="E-Mail">
+          </div>
+          <div> 
+            <input id="signup-credit-card" type="number" minlength="16" maxlength="16" required placeholder="Credit Card Number">
+          </div>
+          <div>       
+            <input id="signup-username" type="text" required placeholder="Username">
+          </div>
+          <div>
+            <input id="signup-password" type="password" name="password" minlength="8" required placeholder="Password">
+          </div>
+          <input id="submit" type="submit" value="Sign up!">
+          <p>Already have an account? <a class="sign-in-link" href="login.html">Sign in</a></p>
+        </form>
+      </div>
+    </article>
+    <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
+    <script src="signup.js"></script>
+  </body>
+</html>
