--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -71,7 +71,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
     <script src="js/main.js"> </script>
-    <script src="db/database2.js"></script>
+    <script src="db/movie-page-two.js"></script>
   </body>
   <footer></footer>
 </html>
