--- a/html/movie_description.html
+++ b/html/movie_description.html
@@ -5,31 +5,22 @@
         <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht."/>
         <title>Seaside Cinema</title>
         <link rel="icon" href="images/logo.png" type="image/icon"/>
-        <link rel="stylesheet" href="css/movie_page.css">
+        <link rel="stylesheet" href="css/movie-page.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head> 
 
-    <body>    
-        <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
-            <ul class="navigation__list">
-                <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
-                <li class="navigation__list-item"><a class="login-link navigation__links" href="login.html">Login</a></li>
-            </ul><a class="login-icon-link" href="login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
-        </nav>
-        <nav class="navigation navigation--mobile">
-            <ul class="navigation__list"> 
-                <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Location</a></li>
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Ticket prices</a></li>
-                <li class="navigation__list-item"><a class="navigation__links" href="http://">Contact</a></li>
-            </ul>
-        </nav>
-        <label class="hamburger-menu">
-            <span class="hamburger-menu__bar"></span>
-        </label>
+    <body>  
+      <nav class="navigation navigation--desktop"><a href="index.html"> <img class="navigation__theater-logo" src="images/logo.png" alt="Logo of the Starlight Cinema"/></a>
+        <ul class="navigation__list">
+          <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a><a class="login-link navigation__links" href="login.html">Login</a></li>
+        </ul><a class="login-icon-link" href="login.html"><i class="login-icon__button fa-solid fa-user"></i></a>
+      </nav>
+      <nav class="navigation navigation--mobile">
+        <ul class="navigation__list"> 
+          <li class="navigation__list-item"><a class="navigation__links" href="/">Home</a></li>
+        </ul>
+      </nav>
+      <label class="hamburger-menu"><span class="hamburger-menu__bar"></span></label>  
     <body>
         <script src="js/movie.js"></script>
         <script src="js/main.js"></script>
