--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht.">
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="css/main.css">
@@ -73,5 +73,4 @@
     <script src="js/main.js"> </script>
     <script src="db/movie-page-two.js"></script>
   </body>
-  <footer></footer>
 </html>
