--- a/html/head.html
+++ b/html/head.html
@@ -1,7 +1,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0"/>
   <meta name="description" content="Seaside Cinema, a movie theater in the located in Utrecht."/>
   <title>Seaside Cinema</title>
   <link rel="stylesheet" href="css/main.css"/>
