--- a/html/login.html
+++ b/html/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.">
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="css/form.css">
@@ -11,8 +11,7 @@
   </head>
   <body>
     <article> 
-      <div class="login-wrapper">
-        <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
+      <div class="login-wrapper"><a class="back-button__link" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
         <h1>Login</h1>
         <form class="login-wrapper__form" method="post"> 
           <div> 
