--- a/html/order.html
+++ b/html/order.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0"/>
-    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht."/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
+    <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.">
     <title>Seaside Cinema</title>
-    <link rel="stylesheet" href="css/form.css"/>
-    <link rel="icon" href="images/logo.png" type="image/icon"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/form.css">
+    <link rel="icon" href="images/logo.png" type="image/icon">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
     <article> 
       <div class="sign-up-wrapper">
-        <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
+        <a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a>
         <h1>Order your ticket!</h1>
         <form class="sign-up-wrapper__form" method="post"> 
           <div> 
             <select id="movie" required> 
               <option value="" disabled="disabled" selected="selected">Movies</option>
-              <option class="movie-option" value="1"> </option>
-              <option class="movie-option" value="2"> </option>
-              <option class="movie-option" value="3"> </option>
-              <option class="movie-option" value="4"> </option>
-              <option class="movie-option" value="5"> </option>
-              <option class="movie-option" value="6"> </option>
-              <option class="movie-option" value="7"> </option>
-              <option class="movie-option" value="8"> </option>
-              <option class="movie-option" value="9"> </option>
+              <option class="movie-option" value="1"></option>
+              <option class="movie-option" value="2"></option>
+              <option class="movie-option" value="3"></option>
+              <option class="movie-option" value="4"></option>
+              <option class="movie-option" value="5"></option>
+              <option class="movie-option" value="6"></option>
+              <option class="movie-option" value="7"></option>
+              <option class="movie-option" value="8"></option>
+              <option class="movie-option" value="9"></option>
               <option class="movie-option" value="10"></option>
               <option class="movie-option" value="11"></option>
               <option class="movie-option" value="12"></option>
