--- a/html/signup.html
+++ b/html/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta name="description" content="Starlight Cinema, a movie theater in the located in Utrecht.">
     <title>Seaside Cinema</title>
     <link rel="stylesheet" href="css/form.css">
@@ -11,21 +11,20 @@
   </head>
   <body>
     <article> 
-      <div class="sign-up-wrapper">
-        <button class="back-button"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a></button>
+      <div class="sign-up-wrapper"><a class="back-button__link" href="index.html"> <i class="fa-solid fa-angle-left"></i></a>
         <h1>Sign up</h1>
         <form class="sign-up-wrapper__form" method="post"> 
           <div> 
             <input id="signup-name" type="text" required placeholder="Full Name">
           </div>
           <div> 
-            <input id="signup-date-of-birth" type="date" required max="01-04-2023">
+            <input id="signup-date-of-birth" type="date" required max="2023-04-16">
           </div>
           <div> 
             <input id="signup-email" type="email" required placeholder="E-Mail">
           </div>
           <div> 
-            <input id="signup-credit-card" type="number" minlength="16" maxlength="16" required placeholder="Credit Card Number">
+            <input id="signup-credit-card" type="number" required placeholder="Credit Card Number">
           </div>
           <div>       
             <input id="signup-username" type="text" required placeholder="Username">
