--- a/html/login.html
+++ b/html/login.html
@@ -13,7 +13,7 @@
     <article> 
       <div class="login-wrapper"><a class="back-button__link" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
         <h1>Login</h1>
-        <form class="login-wrapper__form" method="post"> 
+        <form class="login-wrapper__form" method="post" action="/login"> 
           <div> 
             <ion-icon name="person-sharp">      </ion-icon>
             <input id="username" type="text" required placeholder="Username">
