small changes to href lines

--- a/html/signup.html
+++ b/html/signup.html
@@ -15,7 +15,7 @@
         <h1>Sign up</h1>
         <form class="sign-up-wrapper__form" method="post" action="/signup"> 
           <div> 
-            <input id="signup-name" type="text" required placeholder="Full Name">
+            <input id="signup-name" type="text" name="full_name" required placeholder="Full Name">
           </div>
           <div> 
             <input id="signup-date-of-birth" type="date" name="dateOfBirth" required max="2023-04-16">
