database and file locations
updated the database  file and changed some file locations

--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -71,6 +71,6 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
     <script src="js/main.js"> </script>
-    <script src="db/movie-page-two.js"></script>
+    <script src="js/movie-page-two.js"></script>
   </body>
 </html>
