--- a/html/order.html
+++ b/html/order.html
@@ -63,6 +63,6 @@
       </div>
     </article>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
-    <script src="db/order.js"></script>
+    <script src="js/order.js"></script>
   </body>
 </html>
