added comments everywhere

--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,4 @@
+<!--This file is the homepage where the first ten movies are displayed, it contains a header with a poster and a div for every movie container where the poster and header are stored-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
