--- a/html/user-information.html
+++ b/html/user-information.html
@@ -1,3 +1,4 @@
+<!--This file is the html for the user information page, where users can view their information-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
