--- a/html/login.html
+++ b/html/login.html
@@ -1,3 +1,4 @@
+<!--This file is the html for the login page, it contains a form where the user can input their username and password-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
