--- a/html/signup.html
+++ b/html/signup.html
@@ -1,3 +1,4 @@
+<!--This file is the html for the login page, it contains a form where the user can input their information to signup-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
