--- a/html/order.html
+++ b/html/order.html
@@ -53,6 +53,7 @@
               <option value="9">9</option>
               <option value="10">10</option>
             </select> 
+            <input type="date" min="2023-04-16">
             <select id="movie-time" required> 
               <option value="" disabled="disabled" selected="selected">Time</option>
               <option id="movie-time-one" value="1"></option>
