--- a/html/index-page-2.html
+++ b/html/index-page-2.html
@@ -1,3 +1,4 @@
+<!--This file is the second page where the last ten movies are displayed, it contains a header with a poster and a div for every movie container where the poster and header are stored-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -71,6 +72,6 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
     <script src="js/main.js"> </script>
-    <script src="db/movie-page-two.js"></script>
+    <script src="js/movie-page-two.js"></script>
   </body>
 </html>
