--- a/html/order.html
+++ b/html/order.html
@@ -1,3 +1,4 @@
+<!--This file is the html for the login page, it contains a form where the user can input their movie order-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -63,6 +64,6 @@
       </div>
     </article>
     <script src="https://kit.fontawesome.com/a4720b20e9.js" crossorigin="anonymous"></script>
-    <script src="db/order.js"></script>
+    <script src="js/order.js"></script>
   </body>
 </html>
