--- a/html/user-information.html
+++ b/html/user-information.html
@@ -1,3 +1,4 @@
+<!--This file is the html for the user information page, where users can view their information-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,17 +26,16 @@
       <h1>User Information</h1>
       <dl class="account-details">
         <dt>Name</dt>
-        <dd>Eden Hazard</dd>
+        <dd class="user-data">N</dd>
         <dt>Username</dt>
-        <dd>SkylarSky</dd>
+        <dd class="user-data">UN</dd>
         <dt>Email-Address</dt>
-        <dd>pixelpenguin47@example.com</dd>
+        <dd class="user-data">EA</dd>
         <dt>Credit Card Information</dt>
-        <dd>VISA, 4556208672135430, 6/2027, 713</dd>
+        <dd class="user-data">CCI</dd>
         <dt>Date Of Birth</dt>
-        <dd>31-10-1990</dd>
+        <dd class="user-data">DoB</dd>
       </dl>
-      <button>Order History</button>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"> </script>
